--- a/style.css
+++ b/style.css
@@ -366,6 +366,6 @@ label, form.contact-form label {
  * Slideshare embedding
 */
 
-.entry-content p iframe[src*="https://www.slideshare"] {
+.entry-content iframe[src*="www.slideshare"] {
 	width: 100% !important;
 }
