--- a/styles/dev/22-portfolio-grid.css
+++ b/styles/dev/22-portfolio-grid.css
@@ -9,3 +9,29 @@
 	}
 	
 }
+
+.portfolio-plus-item {
+	
+	background-color: lavender;
+}
+
+.portfolio-plus-item:not(.has-post-thumbnail) {
+	padding: 1em;
+}
+
+
+/* Override */
+.infinite-scroll .posts-navigation, 
+.infinite-scroll .paging-navigation {
+	display: block;
+}
+
+.paging-navigation .next,
+.paging-navigation .prev  {
+	display: none;
+}
+
+body.archive .posts-navigation {
+	display: none;
+}
+
